force-app/main/default/objects/Zipcode_DDC_RRC__c/Zipcode_DDC_RRC__c.object-meta.xml
<CustomObject>
    <description>Holds all zip codes with DDC &amp; RRC information</description>
    <label>Zipcode DDC RRC</label>
    <nameField>
        <label>Zipcode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zipcode DDC RRCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>