force-app/main/default/objects/Zipcode_DDC_RRC__c/fields/DDC__c.field-meta.xml
<CustomField>
    <fullName>DDC__c</fullName>
    <label>DDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>