force-app/main/default/objects/Zipcode_DDC_RRC__c/fields/DOS_Unit__c.field-meta.xml
<CustomField>
    <fullName>DOS_Unit__c</fullName>
    <label>MDO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>