force-app/main/default/objects/Zipcode_DDC_RRC__c/fields/RRC__c.field-meta.xml
<CustomField>
    <fullName>RRC__c</fullName>
    <label>RRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>