force-app/main/default/objects/Zipcode_DDC_RRC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>DDC__c</columns>
    <columns>DOS_Unit__c</columns>
    <columns>External_ID__c</columns>
    <columns>RRC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>